--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/vladimirkuvanovv/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/vladimirkuvanovv/frontend-project-lvl1#readme"
+  "type": "module",
+  "homepage": "https://github.com/vladimirkuvanovv/frontend-project-lvl1#readme",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  }
 }
